# anima-docker-ros2

./: .dockerignore  .env.dev  .env.example  .env.intel  .env.mac  .env.sim  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  anima  compose.hardware.audio.yaml  compose.hardware.camera.yaml  compose.hardware.serial.yaml  compose.hardware.usb.yaml  compose.yaml  docker-bake.hcl
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  nightly.yml  publish.yml  (+1 more)
assets/: hero.html
docker/: Dockerfile  bootstrap-workspace.sh  entrypoint.sh  start-desktop.sh
docs/: ARCHITECTURE.md  COMMANDS.md  DEVCONTAINER.md  HARDWARE.md  IMAGE_MATRIX.md  MEASUREMENTS.md  NVIDIA.md  QUICKSTART.md  QUICKSTART_MAC.md  RELEASE_GUIDE.md  ROADMAP.md  SECURITY.md  STARTER_PRODUCT_PLAN.md  SUPPORT_MATRIX.md
examples/robotflowlabs_anima_demo/: README.md  package.xml  setup.cfg  setup.py
examples/robotflowlabs_anima_demo/resource/: robotflowlabs_anima_demo
examples/robotflowlabs_anima_demo/robotflowlabs_anima_demo/: __init__.py  hello_anima.py
examples/robotflowlabs_anima_pubsub/: README.md  package.xml  setup.cfg  setup.py
examples/robotflowlabs_anima_pubsub/launch/: pubsub_demo.launch.py
examples/robotflowlabs_anima_pubsub/robotflowlabs_anima_pubsub/: listener.py  talker.py
examples/robotflowlabs_anima_starter/: README.md  package.xml  setup.cfg  setup.py
examples/robotflowlabs_anima_starter/launch/: starter_demo.launch.py
examples/robotflowlabs_anima_starter/resource/: robotflowlabs_anima_starter
examples/robotflowlabs_anima_starter/robotflowlabs_anima_starter/: __init__.py
examples/robotflowlabs_anima_starter_sensors/: README.md  package.xml  setup.cfg  setup.py
examples/robotflowlabs_anima_starter_sensors/launch/: starter_sensors.launch.py
examples/robotflowlabs_anima_starter_sensors/resource/: robotflowlabs_anima_starter_sensors
examples/robotflowlabs_anima_starter_sensors/robotflowlabs_anima_starter_sensors/: __init__.py  synthetic_sensor_publisher.py
examples/robotflowlabs_anima_starter_sim/: README.md  package.xml  setup.cfg  setup.py
examples/robotflowlabs_anima_starter_sim/launch/: starter_sim.launch.py
examples/robotflowlabs_anima_starter_sim/resource/: robotflowlabs_anima_starter_sim
examples/robotflowlabs_anima_starter_sim/robotflowlabs_anima_starter_sim/: __init__.py  clock_watcher.py
modules/: demo.env  pubsub.env  starter-sensors.env  starter-sim.env  starter-visualization.env  starter.env
scripts/: cli_helpers.sh  compose.sh  demo_workspace.sh  doctor.sh  env.sh  export_workspace.sh  foxglove.sh  import_workspace.sh  install.sh  load_env.sh  modules.sh  open.sh  password.sh  resolve_env.sh  shell.sh  smoke_base.sh  smoke_cli_up.sh  smoke_cyclonedds.sh  smoke_demo_workspace.sh  smoke_desktop.sh  smoke_foxglove.sh  smoke_modules.sh  smoke_multicontainer_dds.sh  smoke_rviz2.sh  smoke_sim.sh  smoke_webrtc.sh  start.sh  status.sh  sync_reference.sh  url.sh
(+2 files in other folders)
