<?xml version="1.0"?>
<package format="3">
  <name>robotflowlabs_anima_demo</name>
  <version>0.1.0</version>
  <description>Starter ROS 2 demo package for RobotFlowLabs ANIMA.</description>
  <maintainer email="opensource@robotflowlabs.com">RobotFlowLabs</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
