<?xml version="1.0"?>
<package format="3">
  <name>robotflowlabs_anima_starter</name>
  <version>0.1.0</version>
  <description>Default ANIMA visualization starter that launches workspace readiness and live pub/sub together.</description>
  <maintainer email="opensource@robotflowlabs.com">RobotFlowLabs</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robotflowlabs_anima_demo</exec_depend>
  <exec_depend>robotflowlabs_anima_pubsub</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
