<?xml version="1.0"?>
<package format="3">
  <name>robotflowlabs_anima_starter_sensors</name>
  <version>0.1.0</version>
  <description>Synthetic sensor starter for RobotFlowLabs ANIMA.</description>
  <maintainer email="opensource@robotflowlabs.com">RobotFlowLabs</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
