<?xml version="1.0"?>
<package format="3">
  <name>robotflowlabs_anima_starter_sim</name>
  <version>0.1.0</version>
  <description>Gazebo simulation starter for RobotFlowLabs ANIMA.</description>
  <maintainer email="opensource@robotflowlabs.com">RobotFlowLabs</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
